fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -320,8 +320,8 @@ img {
   /*-------------Projects--------------*/
 
   section#projects {
-    margin-top: 20vh;
-    margin-bottom: 20vh;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
   }
 
   h1.project-title {
